# modular_hhcm

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  package.xml  setup.cfg  setup.py  wsgi.py
.github/: release.yml
.github/workflows/: automerge.yml  check_not_changed.yml  create_pr.yaml  create_pull_request.yml
ModularBot/configs/: ModularBot.yaml  config_ModularBot.yaml
ModularBot/joint_map/: ModularBot_joint_map.yaml
ModularBot/srdf/: ModularBot.srdf
ModularBot/urdf/: ModularBot.urdf
URDF_viewer/: URDF_viewer.js
URDF_viewer/example/: module_joint.yaml  module_link.yaml  view_urdf.html
cartesio/: ModularBot.yaml  ModularBot_cartesio_IK_config.yaml  ModularBot_cartesio_config.yaml
configs/: ModularBot.yaml
launch/: cartesio.launch  cartesio_local.launch  display.launch  gazebo.launch  modular.launch  modular.world  modular_world.launch
plugins/ModularBot/: CMakeLists.txt  README.md
plugins/ModularBot/cmake/: CMakeCache.txt
plugins/ModularBot/include/ModularBot/: ModularBot_plugin.h
plugins/ModularBot/src/: ModularBot_plugin.cpp
scripts/: cartesIO_client.py  create_modularbot.ipynb  deploy.sh  discovery.py  entrypoint.sh  generate_concert_robot.ipynb  generate_concert_robot_JSON.ipynb  payload_calc.py  payload_calc_test.py  ros_pubsub.py  sim_discovery.py
src/modular/: ModelStats.py  ModuleNode.py  URDF_writer.py  __init__.py  config_file.yaml  dual_arm_optimization.py  enums.py  ik.py  module_params.yaml  module_params_correct.yaml  robot_id.yaml  ros_objects.py  utils.py  zmq_poller.py  zmq_requester.py
src/modular/modular_data/: deploy.sh
src/modular/modular_data/ModularBot/: CMakeLists.txt  ModularBot_basic.yaml  ModularBot_xbot2.yaml  package.xml
src/modular/modular_data/ModularBot/cartesio/: ModularBot_cartesio_config.yaml  cartesio.launch
src/modular/modular_data/ModularBot/configs/: ModularBot.yaml
src/modular/modular_data/ModularBot/database/ModularBot_fixed_base/: ModularBot_world.sdf  manifest.xml
src/modular/modular_data/ModularBot/joint_map/: ModularBot_joint_map.yaml
src/modular/modular_data/ModularBot/launch/: ModularBot_ik.launch  ModularBot_sliders.launch
src/modular/modular_data/ModularBot/srdf/: ModularBot.srdf
src/modular/modular_data/ModularBot/urdf/: ModularBot.urdf  ModularBot.urdf.xacro
src/modular/modular_data/cartesio/: ModularBot_cartesio_IK_config.yaml  ModularBot_cartesio_Interaction_config.yaml  ModularBot_cartesio_config.yaml
src/modular/modular_data/configs/: ModularBot_xbot1.yaml  ModularBot_xbot2.yaml  fake_controllers.yaml  kinematics.yaml  ros_controllers.launch
src/modular/modular_data/launch/: ModularBot_gazebo.launch  ModularBot_ik.launch  ModularBot_sliders.launch  cartesio.launch  update_collision.launch
src/modular/modular_data/moveit_config/: kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
src/modular/modular_data/moveit_launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_empty.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pino_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml  update_collision.launch
src/modular/modular_data/rviz/: cartesio.rviz  sliders.rviz  xbot.rviz
src/modular/modular_data/urdf/: ModularBot.control.urdf.xacro  ModularBot.library.urdf.xacro  (+3 more)
src/modular/optimization/: GA.py  GA_integers.py  GA_optimization.py  collision_aware_optimization.py  dual_arm_optimization.py  find_best.py  fitness_results.txt  generator.py  hof_plot.py  ik.py  ik2.py  pickle_utilities.py  stats_plot.py  test.py  test_class.py
src/modular/static/: URDF_viewer.js
src/modular/web/: RobotBuilder.spec  RobotDesignStudio.py  RobotDesignStudio.spec  __init__.py  mock_resources.py  mock_stats.py
srdf/: ModularBot.srdf
urdf/: ModularBot.urdf  ModularBot.urdf.xacro  ModularBot.urdf.xacro.old  ModularBot_Generated.urdf  ModularBot_Generated.urdf.xacro  ModularBot_base.urdf  ModularBot_joint_map.yaml  ModularBot_new.urdf.xacro  ModularBot_test.srdf  ModularBot_test.urdf  ModularBot_test.urdf.xacro  URDF_generator.py  URDF_generator_angular.py  URDF_generator_elbow.py  config.xacro  elbow_module.urdf  joint_module.urdf  link_module.urdf  modular.gazebo  module_elbow.yaml  read_yaml.py
web/: GA_optimization.py  ModuleNode.py  RobotDesignStudio  URDF_generator_elbow.py  URDF_writer.py  application.py  dual_arm_optimization.py  ec_boards_base_input_pb2.py  esc_type.yaml  find_best.py  generator.py  ik.py  ik2.py  pickle_utilities.py  poller.py  read_yaml.py  repl.yaml  robot_id.yaml  server.py  topology_generator.py  zmq_requester.py
web/static/: URDF_viewer.js
web/static/urdf/: elbow_module.urdf  joint_module.urdf  link_module.urdf  size_adapter_module.urdf
web/static/yaml/: master_cube.yaml  module_elbow.yaml  module_elbow_B.yaml  module_elbow_M.yaml  module_elbow_S.yaml  module_gripper.yaml  module_joint.yaml  module_joint_B.yaml  module_joint_M.yaml  module_joint_S.yaml  module_joint_double_elbow_AVOCADO_B.yaml  module_joint_double_elbow_B.yaml  module_joint_elbow_AVOCADO_B.yaml  module_joint_elbow_B.yaml  module_joint_yaw_AVOCADO_B.yaml  module_link.yaml  module_link_300mm_B.yaml  module_link_300mm_M.yaml  module_link_300mm_S.yaml  module_link_500mm.yaml  module_link_500mm_B.yaml  module_link_500mm_M.yaml  module_link_500mm_S.yaml  module_link_700mm.yaml  module_link_700mm_B.yaml  module_link_700mm_M.yaml  module_link_700mm_S.yaml  module_link_elbow_45_B.yaml  module_link_elbow_90_B.yaml  module_link_straight_140_B.yaml  module_link_straight_70_B.yaml  module_size_adapter.yaml  module_size_adapter_B2M.yaml  module_size_adapter_B2S.yaml  module_size_adapter_M2S.yaml  module_tool_exchanger_B.yaml  module_tool_exchanger_heavy.yaml  socket.yaml
web/templates/: test.html  test_old.html  urdf_test.html  view_urdf.html
(+226 files in other folders)
