<package>

  <name>modular</name>
  <version>1.0.0</version>
  <description>
  Modular robots tool
  </description>
  <maintainer email="edoardo.romiti@iit.it">Edoardo Romiti</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <!-- Python dependencies -->
  <run_depend>python-rosdep</run_depend>
  <run_depend>python-rospkg</run_depend>
  <!-- <run_depend>python-flask</run_depend> -->
  <run_depend>python-future</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-zmq</run_depend>

</package>
