[metadata]
name = modular
version = 0.0.2
author = Edoardo Romiti
author_email = edoardo.romiti@iit.it
description = tool for modular robots urdf srdf ... generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ADVRHumanoids/modular
project_urls =
    Bug Tracker = https://github.com/ADVRHumanoids/modular/issues
classifiers =
    Programming Language :: Python :: 2
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
# packages=['modular', 'modular.optimization', 'modular.protobuf', 'modular.web']
python_requires = ==2.7.17
include-package-data = True
packages = find:
install_requires =
    flask
    anytree
    pyzmq
    numpy
    future
    defusedxml
    protobuf == 3.17.3
    protobuf_to_dict >= 0.1.0
    PyYaml
    rospkg

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    robot-design-studio = modular.web.RobotDesignStudio:main