[metadata]
name = modular
version = 0.1.1
author = Edoardo Romiti
author_email = edoardo.romiti@iit.it
description = tool for modular robots urdf srdf ... generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ADVRHumanoids/modular
project_urls =
    Bug Tracker = https://github.com/ADVRHumanoids/modular/issues
classifiers =
    Programming Language :: Python :: 2
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
# packages=['modular', 'modular.optimization', 'modular.protobuf', 'modular.web']
include-package-data = True
packages = find:
install_requires =
    flask
    anytree
    pyzmq
    numpy
    future
    defusedxml
    PyYaml
    rospkg
    scipy
    pin
    apscheduler

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    robot-design-studio = modular.web.RobotDesignStudio:main
